--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,40 @@
 
         <start-class>com.xu.drools.DroolsSpringbootApplication</start-class>
 
+        <drools.version>6.5.0.Final</drools.version>
         <druid.version>1.0.18</druid.version>
         <mybatis.version>3.4.1</mybatis.version>
         <mybatis-spring-boot.version>1.1.1</mybatis-spring-boot.version>
     </properties>
 
     <dependencies>
+        <!--Drools-->
+        <dependency>
+            <groupId>org.kie</groupId>
+            <artifactId>kie-api</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-core</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-decisiontables</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-templates</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+
         <!--SpringBoot core-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -71,7 +99,6 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-        <!--tomcat jdbc-->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jdbc</artifactId>
